// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: CalculatorInputField should render a simple numeric value 1`] = `
<input
  className="nice-form-control"
  disabled={undefined}
  max={null}
  min={null}
  onChange={[Function]}
  onKeyPress={null}
  placeholder={undefined}
  type="text"
  value={10}
/>
`;

exports[`Component: CalculatorInputField should render a text based formula 1`] = `
<input
  className="nice-form-control"
  disabled={undefined}
  max={null}
  min={null}
  onChange={[Function]}
  onKeyPress={null}
  placeholder={undefined}
  type="text"
  value="5 + 5"
/>
`;

exports[`Component: CalculatorInputField should render without props 1`] = `
<input
  className="nice-form-control"
  disabled={undefined}
  max={null}
  min={null}
  onChange={[Function]}
  onKeyPress={null}
  placeholder={undefined}
  type="text"
  value=""
/>
`;
